k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  strategy:
    type: Recreate # <--- This kills the old existing pod first if we have Recreate, to prevent add rollingupdate if not mentioned by default is also rollingupdate
    #rollingUpdate: # <--- This is for rollingupdate only not for recreate
      #maxUnavailable: 25%
      #maxSurge: 25%
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: drift-backend:1.0
          ports:
            - containerPort: 5138
          livenessProbe:
            httpGet:
              path: /api/health/liveness
              port: 5138
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/health/readiness
              port: 5138
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
