k8s/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-pod
  labels:
    app: backend
spec:
  containers:
    - name: backend
      image: drift-backend:1.0
      ports:
        - containerPort: 5138   # ✅ FIXED (was 8001)
